--- a/views/queen_attacked.html.twig
+++ b/views/queen_attacked.html.twig
@@ -2,11 +2,11 @@
 <html>
 <head>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css'>
-    <title>Convert to Title Case!</title>
+    <title>Queen attack result!</title>
 </head>
 <body>
     <div class="container">
-        <h1>Your phrase in title case:</h1>
+        <h1>Your attack was a:</h1>
         <h4>{{ result }}</h4>
     </div>
 </body>
