add chessboard image and refactor canAttack

--- a/views/form.html.twig
+++ b/views/form.html.twig
@@ -28,5 +28,7 @@
             <button type='submit' class='btn-success'>Can she attack?</button>
         </form>
     </div>
+    <br>
+    <img src="chessboard.jpg">
 </body>
 </html>
